# torch-geometric-pool

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CHANGELOG_1.0.md  CHANGELOG_SparseTensor.md  CONTRIBUTE.md  README.md  conda_env.yml  pre-requirements.txt  pyproject.toml  test_maxcut_integration.py  test_maxcut_loss.py  test_maxcut_wrapper.py
.github/workflows/: ci.yaml
docs/: Makefile  README.md  requirements.txt
docs/source/: conf.py  index.rst  poolers_cheatsheet.rst
docs/source/_static/css/: custom.css
docs/source/_templates/components/: foot-copyright.html
docs/source/_templates/partials/: globaltoc-above.html
docs/source/api/: connect.rst  datasets.rst  lift.rst  poolers.rst  reduce.rst  select.rst  src.rst  tgp.rst
docs/source/api/data/: index.rst  loaders.rst  transforms.rst
docs/source/api/utils/: index.rst  losses.rst  ops.rst  typing.rst
docs/source/content/: quickstart.rst  src.md
docs/source/tutorials/: advanced.ipynb  hierarchical_gnns.ipynb  index.rst  intro.ipynb  precoarsening_and_transforms.ipynb  preprocessing_and_transforms.ipynb  quick_start.ipynb
examples/: classification.py  classification_aggr_reduce.py  classification_pan.py  clustering.py  clustering_tvgnn.py  node_class.py  pre_coarsening.py  time_and_mem_test.py
tests/: conftest.py  test_asap.py  test_base_lift.py  test_base_reduce.py  test_base_select.py  test_bnpool.py  test_bnpool_losses.py  test_bnpool_sparse.py  test_connect.py  test_diffpool.py  test_dmon.py  test_ecpool.py  test_edge_weight_normalization.py  test_global_reduce.py  test_graclus.py  test_hoscpool.py  test_imports.py  test_justbalance.py  test_kmis.py  test_lapool.py  test_maxcut.py  test_mincut_loss.py  test_mp.py  test_ndp.py  test_negative_edge_sampling.py  test_nmf.py  test_nopool.py  test_poolers.py  test_precoarsening.py  test_signature.py  test_spt_adj.py  test_src.py  test_topk.py  test_trainable.py  test_transforms.py  test_utils.py
tests/connect/: test_base_conn.py  test_dense_conn.py  test_eigenpool_conn.py  test_kron_conn.py
tests/data/: test_collate.py  test_loaders.py  test_pyg_collate_separate.py  test_transforms.py
tests/datasets/: test_csbm.py  test_expwl1.py  test_graph_classification_bench.py  test_gset.py  test_multipartite_graph.py  test_pygsp.py
tests/lift/: test_base_lift.py  test_eigenpool_lift.py
tests/mp/: test_mp.py
tests/poolers/: test_asap.py  test_asym_cheeger_cut.py  test_bnpool.py  test_bnpool_losses.py  test_bnpool_sparse.py  test_dense_poolers_batched_vs_unbatched.py  test_diffpool.py  test_dmon.py  test_ecpool.py  test_eigenpool.py  test_graclus.py  test_hoscpool.py  test_justbalance.py  test_kmis.py  test_lapool.py  test_maxcut.py  test_mincut.py  test_ndp.py  test_nmf.py  test_nopool.py  test_pan.py  test_sag.py  test_sep.py  test_topk.py
tests/reduce/: test_aggr_reduce.py  test_base_reduce.py  test_eigenpool_reduce.py  test_global_reduce.py
tests/selection/: test_base_select.py  test_eigenpool_select.py  test_mlp_select.py  test_sep_select.py
tests/utils/: dense_loss_test_helpers.py  test_acc_loss.py  test_cheatsheet.py  test_diffpool_loss.py  test_dmon_loss.py  test_hosc_loss.py  test_justbalance_loss.py  test_losses.py  test_mincut_loss.py  test_negative_edge_sampling.py  test_ops.py
tgp/: __init__.py  imports.py  src.py
tgp/connect/: __init__.py  base_conn.py  dense_conn.py  dense_conn_spt.py  eigenpool_conn.py  identity_connect.py  kron_conn.py
tgp/data/: __init__.py  collate.py  loaders.py  transforms.py
tgp/datasets/: __init__.py  csbm.py  expwl1.py  graph_classification_bench.py  gset.py  multipartite_graph.py  pygsp.py
tgp/lift/: __init__.py  base_lift.py  eigenpool_lift.py
tgp/mp/: __init__.py  gtvconv.py
tgp/poolers/: __init__.py  asap.py  asym_cheeger_cut.py  bnpool.py  bnpool_sparse.py  diffpool.py  dmon.py  edge_contraction.py  eigenpool.py  graclus.py  hosc.py  just_balance.py  kmis.py  lapool.py  maxcut.py  mincut.py  ndp.py  nmf.py  nopool.py  pan.py  sag.py  sep.py  topk.py
tgp/reduce/: __init__.py  aggr_reduce.py  base_reduce.py  eigenpool_reduce.py  get_aggr.py  global_reduce.py  identity_reduce.py
tgp/select/: __init__.py  base_select.py  dense_select.py  dp_select.py  edge_contraction_select.py  eigenpool_select.py  graclus_select.py  identity_select.py  kmis_select.py  lapool_select.py  maxcut_select.py  mlp_select.py  ndp_select.py  nmf_select.py  sep_select.py  topk_select.py
tgp/utils/: __init__.py  cheatsheet.py  losses.py  negative_edge_sampling.py  ops.py  signature.py  typing.py
